examples/apigatewayv2/cluster/v1beta1/api-http.yaml

apiVersion: apigatewayv2.aws.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: apigatewayv2/v1beta1/route
  name: example
  labels:
    upjet.upbound.io/test-group: apigatewayv2-http
spec:
  forProvider:
    apiIdSelector:
      matchLabels:
        upjet.upbound.io/test-group: apigatewayv2-http
    region: us-west-1
    routeKey: "POST /login"
    targetSelector:
      matchLabels:
        upjet.upbound.io/test-group: apigatewayv2-http

---

apiVersion: apigatewayv2.aws.upbound.io/v1beta1
kind: Deployment
metadata:
  annotations:
    meta.upbound.io/example-id: apigatewayv2/v1beta1/deployment
  name: example
  labels:
    upjet.upbound.io/test-group: apigatewayv2-http
spec:
  forProvider:
    apiIdSelector:
      matchLabels:
        upjet.upbound.io/test-group: apigatewayv2-http
    description: Example deployment
    region: us-west-1
